--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
   max-width: 100%;
   margin: 0;
   padding: 0;
-  text-align: center;
 }
 
 .logo {
@@ -43,24 +42,6 @@
   color: #888;
 }
 
-/* Override for content titles */
-h2, h3, h4 {
-  text-align: left;
-}
-
-.content-row h2,
-.content-row h3 {
-  text-align: left;
-  padding-left: 1.5rem;
-}
-
-/* Additional alignment for section titles */
-section > h2,
-section > h3 {
-  text-align: left;
-  padding-left: 1.5rem;
-}
-
 /* Base styling for the Netflix clone */
 body {
   margin: 0;
@@ -70,19 +51,9 @@ body {
   color: #ffffff;
 }
 
-/* Additional fixes for navigation */
-nav a {
-  text-decoration: none;
-}
-
-nav a svg {
-  vertical-align: middle;
-  margin-right: 5px;
-}
-
 /* Content row fixes */
 .content-row-title {
-  text-align: left !important;
+  text-align: left;
   padding-left: 1.5rem;
 }
 
